# Ruin

./: .gitignore  CMakeLists.txt  Ruin.sublime-project  Ruin.sublime-workspace  build.bat  collections.h  memory.cpp  memory.h  ruin.cpp  utility.cpp  utility.h
code/common/: ruin_assert.cpp  ruin_assert.h  ruin_int.h  ruin_string.h
code/common/collections/: ruin_hashtable.h  ruin_list.cpp  ruin_list.h  ruin_vector.cpp  ruin_vector.h
code/game/: ruin_game.h  ruin_level.h  ruin_levelmap.cpp  ruin_levelmap.h  ruin_tileset.cpp  ruin_tileset.h
code/platform/: ruin_application.h  ruin_file.h  ruin_input.h
data/: manifest.json  settings.json
data/materials/: basic.material  blue.material  untitled.mtl
data/shaders/: basic.frag  basic.vert  blue.vert  phong.frag  phong.vert  sprite_shader.frag  sprite_shader.vert
proj/ruin/: readme.txt  ruin.sdf  ruin.sln  ruin.vcxproj  ruin.vcxproj.jake.nvuser
proj/vstudio/: ruin.sln  ruin.vcxproj
src_backup/: Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CameraService.cpp  CameraService.h  CameraSystem.h  Component.cpp  Component.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  GLFWWindow.cpp  GLFWWindow.h  GLFWWindowService.cpp  GLFWWindowService.h  IComponentSystem.h  IMessageService.h  IRenderer.h  IResourceLoader.h  ISceneNode.h  ISceneService.h  ISettingsService.h  IWindow.h  IWindowService.h  Id.h  IdService.cpp  IdService.h  InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h  Main.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MessageService.cpp  MessageService.h  Model.cpp  (+44 more)
(+40 files in other folders)
